# MBANeRF

./: .gitignore  data  install.md  isntall.md  pyproject.toml
nerfmamba/: nerfmamba_config.py  nerfmamba_field.py  nerfmamba_model.py  vimmlp.py
