[project]
name = "nerfmamba"
description = "NerfMamba repository for creating and registering new methods in nerfstudio."
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["nerfmamba*"]

[project.entry-points.'nerfstudio.method_configs']
nerfmamba = 'nerfmamba.nerfmamba_config:nerfmamba_method'
